Feat: Refine UI

--- a/client/src/_libs/components/_docs/docs.mdx
+++ b/client/src/_libs/components/_docs/docs.mdx
@@ -25,6 +25,6 @@ import { Meta } from '@storybook/blocks';
 </style>
 
 <article id="main">
-  <h1 class="mdx">입찰왕 디자인 시스템</h1>
-  <p class="desc">입찰왕의 디자인 시스템입니다.</p>
+  <h1 class="mdx">BDS</h1>
+  <p class="desc">Bidking Design System</p>
 </article>
